# CSA_Pharma_Framework

./: .gitignore  CSA_INFO.md  MANUAL.md  Makefile  README.md  pyproject.toml  requirements.txt  test_qms.db
.github/workflows/: nightly_regression.yml  validation_pipeline.yml
demo_app/: Dockerfile  docker-compose.yml
demo_app/app/: audit_trail.py  database.py  main.py  models.py  seed.py
demo_app/app/routes/: auth.py  batch_records.py  capa.py  dashboard.py  deviations.py  documents.py
docs/: csa_methodology.md  glossary.md
evidence_capture/: audit_trail_collector.py  extracted_audit_trail.json.sha256  integrity.py
evidence_capture/validators/: alcoa_validator.py
information/: _annex11_text.txt  _fda_csa_text.txt  _pics_text.txt
pharma_csa_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
report_generator/: generator.py
report_generator/templates/: validation_summary.html
risk_engine/: gamp_categorizer.py  risk_assessor.py  risk_matrix.py
risk_engine/config/: gamp_categories.yaml  risk_criteria.yaml
system_inventory/: classifier.py  inventory.py
system_inventory/config/: qms_system.yaml
test_suites/: scripted_results.xml
test_suites/scripted/: conftest.py  test_access_control.py  test_audit_trail.py  test_auth_compliance.py  test_capa_workflow.py  test_data_integrity.py  test_deviation_workflow.py  test_electronic_signatures.py
test_suites/unscripted/: exploratory_logger.py  session_template.yaml
tests/: test_inventory.py  test_risk_engine.py
